# cogni-agent

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  backend_server.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
cogniagent-settings-&-workspace/: .npmrc  README.md  metadata.json  package-lock.json  package.json
cogniagent-settings-&-workspace/electron/: main.cjs  preload.js
cogniagent-settings-&-workspace/src/: App.tsx  index.css  types.ts
cogniagent-settings-&-workspace/src/components/: ChatWorkspace.tsx  SettingsModal.tsx  VoiceModeOverlay.tsx
docs/: index.md
examples/: custom_agent.py  quickstart.py
src/cogni_agent/: __init__.py  __main__.py  builder.py  gui.py  runtime.py  vision.py  voice.py
src/cogni_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cogni_agent/core/: __init__.py  errors.py  interfaces.py  types.py
src/cogni_agent/evolution/: __init__.py  engine.py
src/cogni_agent/identity/: __init__.py  manager.py  stores.py
src/cogni_agent/llm/: __init__.py  config.py  gateway.py  local.py
src/cogni_agent/memory/: __init__.py  manager.py  stores.py
src/cogni_agent/multi_agent/: __init__.py  team.py
src/cogni_agent/reasoning/: __init__.py  react.py
src/cogni_agent/tools/: __init__.py  base.py  computer.py  mcp.py
src/cogni_agent/tools/builtin/: __init__.py
tests/: test_builder.py  test_computer.py  test_evolution.py  test_identity.py  test_imports.py  test_llm.py  test_mcp_and_persistence.py  test_memory.py  test_multi_agent.py  test_procedural_memory.py  test_reasoner.py  test_tools.py  test_types.py  test_vision.py  test_voice.py
tests/integration/: __init__.py  test_e2e_basic.py
web_console/: app.py  requirements.txt
web_console/static/: index.html
