[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cogni-agent"
version = "0.1.0"
description = "A cognitive AI Agent framework — agents with self-awareness, memory, and evolution"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "CogniAgent Team", email = "team@cogni-agent.dev" },
]

keywords = [
    "ai", "agent", "llm", "cognitive", "framework",
    "multi-agent", "autonomous", "reasoning", "tool-use",
    "computer-use", "agent-framework",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Typing :: Typed",
]

requires-python = ">=3.11"

dependencies = [
    "litellm>=1.60.0",
    "pydantic>=2.0,<3",
    "chromadb>=0.6.0",
    "openai>=1.0.0",
    "aiohttp>=3.9",
    "structlog>=24.0",
    "httpx>=0.28",
    "duckduckgo_search>=8.0",
    "aiofiles>=25.0",
    "Pillow>=10.0",
    "mss>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "pre-commit>=3.8",
    "ipython>=8.0",
]
web = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
]
gui = [
    "pyautogui>=0.9",
    "pynput>=1.7",
]
all = [
    "cogni-agent[dev,web,gui]",
]

[project.urls]
homepage = "https://github.com/cogni-agent/cogni-agent"
repository = "https://github.com/cogni-agent/cogni-agent"
documentation = "https://cogni-agent.dev"
changelog = "https://github.com/cogni-agent/cogni-agent/releases"

[project.scripts]
cogni-agent = "cogni_agent.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cogni_agent*"]

[tool.setuptools.package-data]
"cogni_agent" = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "needs_api: marks tests that require API keys (deselect with '-k \"not needs_api\"')",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.coverage.run]
source = ["cogni_agent"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]